# TheScraper

./: .gitignore  README.md  URLS.txt  pyproject.toml
docs/: manager_brief_he.html  manager_brief_he.md
src/the_scraper/: __init__.py  analysis.py  brief.py  cli.py  config.py  feed_backend.py  instaloader_backend.py  models.py  report.py  scraper.py  storage.py
src/the_scraper/templates/: report.html.j2
tests/: test_analysis.py  test_brief.py  test_config.py  test_feed_backend.py  test_instaloader_backend.py  test_report.py  test_scraper_parsing.py
