[project]
name = "the-scraper"
version = "0.1.0"
description = "Conservative public Instagram scraping, LLM analysis, and dashboard reporting for regional ADL accounts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "instaloader>=4.13.0",
    "jinja2>=3.1.4",
    "openai>=1.84.0",
    "playwright>=1.44.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "rich>=13.7.1",
    "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.4.8",
]

[project.scripts]
the-scraper = "the_scraper.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/the_scraper"]

[tool.hatch.build.targets.wheel.force-include]
"src/the_scraper/templates" = "the_scraper/templates"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
